Wrote some more

--- a/discussion.Rmd
+++ b/discussion.Rmd
@@ -12,9 +12,9 @@ However, despite all of these relative successes, both the theoretical model and
  
 ## Limitations of the theoretical model
 
-The first important thing to discuss are the limitations of the theoretical model described in Section \@ref(problems). This model conceptualizes the data visualization pipeline as a structure-preserving mapping - a functor - from the space of data subsets to the space of graphics. This relies on the key assumption that, if we start from a place of structure - a hierarchy of data subsets ordered by set inclusion/union - the subsequent steps of the data visualization pipeline should not discard this structure. Instead, the transformations of our data into summary statistics and aesthetic encodings should flow naturally around this structure. 
+Firstly, it is important discuss the limitations of the theoretical model described in Section \@ref(problems). This model conceptualizes the data visualization pipeline as a structure-preserving mapping - a functor - from the space of ordered data subsets to the space of graphics. This relies on the key assumption that, if we start with a structured object - a hierarchy of data partitions made out of subsets ordered by set inclusion/union - the subsequent steps of the data visualization pipeline should not discard this structure arbitrarily. Instead, transformations of data into summary statistics and aesthetic encodings should preserve the inherent hierarchical relationships. This naturally leads us to groups and monoids.
 
-Of course, the first possible critique of the model is that not all plot types have to represent distinct data subsets. For example, as discussed in Section \@ref(comparison-disjointness), in certain visualizations of set-typed data, two geometric objects in the same layer may represent overlapping data subsets [see e.g. @alsallakh2013]. However, as I argued in that section, these types of visualizations are fairly specialized and rare, and, conversely, there is a number of arguments one can make for the "naturality" of typical, disjoint, part-whole object relationships which we encounter in most everyday plots.  
+One immediate critique is that the data partition hierarchy model does not describe all possible plot types. For instance, it precludes visualizations where geometric objects within the same graphical layer represent overlapping data subsets, as seen, for example, in certain visualizations of set-typed data [see Section \@ref(comparison-disjointness), also e.g. @alsallakh2014]. However, these types of visualizations are fairly rare. In the vast majority of standard plots - including barplots, histograms, density plots, scatterplots, lineplots, and parallel coordinate plots, among others - each geometric object represents a distinct subset of cases, independent from the rest, and the objects may combine together to form well-behaved, part-whole relationships. Further, as discussed in in Section \@ref(comparison-disjointness), this tendency towards disjoint representations does not seem to be a mere convention or accident, but instead likely stems from some fundamental mathematical and cognitive properties of disjointness and independence. Thus, while non-disjoint plots may be useful in certain specialized circumstances, disjointness seems to provide a good, general model.
 
-There are many useful visualization types which do not neatly fit into this model, and many of them may be reconciled with linked selection in some way. However, such reconciliation has to be, by definition, ad hoc.  
+Another potential point of contention are the limitations that the model imposes. Requiring that all graphics and the underlying summary statistics are (monotonic, commutative) monoids or groups excludes a non-trivial fraction of popular plot types. For instance, boxplots are entirely made out of non-monoidal summary statistics, nevertheless, they have been successfully implemented alongside linked selection in some interactive data visualization packages [see e.g. @theus2002; @urbanek2011]. However, the point of the model is not to say that certain kinds of visualizations can never be reconciled with linked selection, instead, it is to easily identify certain "natural" types of visualization where linked selection are inherently compatible. We are free to violate this naturality when we see fit, however, we should be aware of the fact that the reconciliation of non-compliant visualizations may require some ad-hoc solutions. 
 
