--- a/references.bib
+++ b/references.bib
@@ -1524,6 +1524,14 @@
   publisher	= {Australian National University}
 }
 
+@Manual{rmarkdown2024,
+  title = {rmarkdown: Dynamic Documents for R},
+  author = {JJ Allaire and Yihui Xie and Christophe Dervieux and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
+  year = {2024},
+  note = {R package version 2.29},
+  url = {https://github.com/rstudio/rmarkdown},
+}
+
 @Misc{		  icd2024a,
   title		= {{ICD-10 Version:2019}},
   author	= {{World Health Organization}},
@@ -4058,6 +4066,25 @@
   year		= {2019},
   publisher	= {Chapman and Hall/CRC}
 }
+
+@inproceedings{phung2009,
+  title={Lightweight self-protecting JavaScript},
+  author={Phung, Phu H and Sands, David and Chudnov, Andrey},
+  booktitle={Proceedings of the 4th International Symposium on Information, Computer, and Communications Security},
+  pages={47--60},
+  year={2009}
+}
+
+@misc{handmadehero2025,
+  author = {{Handmade Hero}},
+	title = {{Compile-time introspection and metaprogramming}},
+	journal = {Handmade Network},
+	year = {2025},
+	month = mar,
+	note = {[Online; accessed 5. Mar. 2025]},
+	url = {https://handmade.network/fishbowl/metaprogramming}
+}
+
 
 @Manual{	  wickham2023,
   title		= {scales: Scale Functions for Visualization},
