Wrote some more

--- a/discussion.Rmd
+++ b/discussion.Rmd
@@ -16,5 +16,15 @@ Firstly, it is important discuss the limitations of the theoretical model descri
 
 One immediate critique is that the data partition hierarchy model does not describe all possible plot types. For instance, it precludes visualizations where geometric objects within the same graphical layer represent overlapping data subsets, as seen, for example, in certain visualizations of set-typed data [see Section \@ref(comparison-disjointness), also e.g. @alsallakh2014]. However, these types of visualizations are fairly rare. In the vast majority of standard plots - including barplots, histograms, density plots, scatterplots, lineplots, and parallel coordinate plots, among others - each geometric object represents a distinct subset of cases, independent from the rest, and the objects may combine together to form well-behaved, part-whole relationships. Further, as discussed in in Section \@ref(comparison-disjointness), this tendency towards disjoint representations does not seem to be a mere convention or accident, but instead likely stems from some fundamental mathematical and cognitive properties of disjointness and independence. Thus, while non-disjoint plots may be useful in certain specialized circumstances, disjointness seems to provide a good, general model.
 
-Another potential point of contention are the limitations that the model imposes. Requiring that all graphics and the underlying summary statistics are (monotonic, commutative) monoids or groups excludes a non-trivial fraction of popular plot types. For instance, boxplots are entirely made out of non-monoidal summary statistics, nevertheless, they have been successfully implemented alongside linked selection in some interactive data visualization packages [see e.g. @theus2002; @urbanek2011]. However, the point of the model is not to say that certain kinds of visualizations can never be reconciled with linked selection, instead, it is to easily identify certain "natural" types of visualization where linked selection are inherently compatible. We are free to violate this naturality when we see fit, however, we should be aware of the fact that the reconciliation of non-compliant visualizations may require some ad-hoc solutions. 
+Another potential point of contention are the limitations that the model imposes. Requiring that all graphics and the underlying summary statistics are (monotonic, commutative) monoids or groups excludes a non-trivial fraction of popular plot types. For instance, boxplots are entirely made out of non-monoidal summary statistics, nevertheless, they have been successfully implemented alongside linked selection in some interactive data visualization packages [see e.g. @theus2002; @urbanek2011]. However, the point of the model is not to say that certain kinds of visualizations can never be reconciled with linked selection, instead, it is to easily identify certain "natural" types of visualization where linked selection is inherently compatible. We are free to violate this naturality when we see fit, however, we should be aware of the fact that the reconciliation of these non-compliant visualizations may require some ad-hoc solutions. 
+
+## Limitations of the software packages
+
+During this project, I had time to think through and test out different implementations of the various features of the interactive data visualization system. While I succeeded in some areas, there were also areas which could still use some improvement. 
+
+As discussed in Section \@ref(system), one shortcoming of my system was the absence of a simple declarative schema for specifying interactive graphics. While some parts of the internal codebase such as [REFERENCE WRANGLER] showed some promise, ultimately, a large part of the definition of plots was procedural, and nominal plotting functions were used in `plotscaper`. As noted earlier, this challenge is not unique to my system; many other, overtly declarative, data visualization systems offer only partial solutions [see also @wu2024]. As also discussed previously, there are several issues which make coming up with declarative schemas for interactive graphics difficult: lack of a direct correspondence between data variables and encodings, the hierarchical nature of graphics (discussed e.g. in Section \@ref(hierarchy)), 
+
+
+
+
 
